--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Golden</title>
+    <title>Golden landing-page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="SitePoint">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
