Add splash section with styles

--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Golden landing-page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="SitePoint">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:ital,wght@0,300;1,600&family=Pacifico&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="main_container">
-      <header class="logo_navigation">
-        <div class="container">
-          <div class="row">
-            <div class="logo col-6">
-              <p>Golden</p>
-            </div>
-            <div class="navigation col-6">
-              <ul>
-                <li>
-                  <a href="#">Home</a>
-                </li>
-                <li>
-                  <a href="#">Services</a>
-                </li>
-                <li>
-                  <a href="#">Portfolio</a>
-                </li>
-                <li>
-                  <a href="#">About</a>
-                </li>
-                <li>
-                  <a href="#">Contact</a>
-                </li>
-              </ul>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <title>Golden landing-page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600;700;800&family=Open+Sans:ital,wght@0,300;0,700;0,800;1,300;1,600&family=Pacifico&family=Roboto+Slab:wght@100;200;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <section class="splash">
+    <header class="logo_navigation">
+      <div class="container">
+        <div class="row">
+          <div class="logo col-6">
+            <p>Golden</p>
+          </div>
+          <div class="navigation col-6">
+            <ul>
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">Services</a>
+              </li>
+              <li>
+                <a href="#">Portfolio</a>
+              </li>
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </header>
-      <footer>
-      </footer>
+      </div>
+    </header>
+    <div class="splash_inner">
+      <p class="welcome_text">Welcome to our studio</p>
+      <h1>It's nice to meet you</h1>
+      <a href="#" class="btn">Tell me more</a>
     </div>
-  </body>
+  </section>
+  <div class="main_container">
+    <p>bla lsdkslkdoskdoskdosk</p>
+    <footer>
+    </footer>
+  </div>
+</body>
 </html>
