--- a/index.html
+++ b/index.html
@@ -47,7 +47,37 @@
     </div>
   </section>
   <div class="main_container">
-    <p>bla lsdkslkdoskdoskdosk</p>
+    <section class="services">
+      <div class="section_title">
+        <h2>Services</h2>
+        <p>Lorem ipsum dolor</p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="services_box col-sm-4 col-12">
+            <i class="fas fa-shopping-basket"></i>
+            <h3>E-commerce</h3>
+            <p>Proin iaculis purus consequat sem cure
+              digni ssim. Donec porttitora entum suscipit
+              aenean rhoncus posuere odio in tincidunt.<p>
+          </div>
+          <div class="services_box col-sm-4 col-12">
+            <i class="fas fa-mobile"></i>
+            <h3>Responsive Web</h3>
+            <p>Proin iaculis purus consequat sem cure
+              digni ssim. Donec porttitora entum suscipit
+              aenean rhoncus posuere odio in tincidunt.<p>
+          </div>
+          <div class="services_box col-sm-4 col-12">
+            <i class="fas fa-shield-alt"></i>
+            <h3>Web Security</h3>
+            <p>Proin iaculis purus consequat sem cure
+              digni ssim. Donec porttitora entum suscipit
+              aenean rhoncus posuere odio in tincidunt.<p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
     </footer>
   </div>
