Add portfolio section with styles

--- a/index.html
+++ b/index.html
@@ -78,8 +78,62 @@
         </div>
       </div>
     </section>
-    <footer>
-    </footer>
   </div>
+  <section class="portfolio">
+    <div class="section_title">
+      <h2>Our Portfolio</h2>
+      <p>Lorem ipsum dolor</p>
+    </div>
+    <div class="container">
+      <div class="row row_space">
+        <div class="portfolio_box col-sm-4 col-12">
+          <img src='/images/mockup1.jpg' alt="mockup">
+          <div class="portfolio_inner">
+            <h3>Ebony & Ivory</h3>
+            <p>Proin iaculis<p>
+          </div>
+        </div>
+        <div class="portfolio_box col-sm-4 col-12">
+          <img src='/images/mockup2.jpg' alt="mockup">
+          <div class="portfolio_inner">
+            <h3>Smart Stationary</h3>
+            <p>Proin iaculis<p>
+          </div>
+        </div>
+        <div class="portfolio_box col-sm-4 col-12">
+          <img src='/images/mockup3.jpg' alt="mockup">
+          <div class="portfolio_inner">
+            <h3>Clever Poster</h3>
+            <p>Proin iaculis<p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="portfolio_box col-sm-4 col-12">
+          <img src='/images/mockup4.jpg' alt="mockup">
+          <div class="portfolio_inner">
+            <h3>Vinyl Record</h3>
+            <p>Proin iaculis<p>
+          </div>
+        </div>
+        <div class="portfolio_box col-sm-4 col-12">
+          <img src='/images/mockup5.jpg' alt="mockup">
+          <div class="portfolio_inner">
+            <h3>Treehouse Template</h3>
+            <p>Proin iaculis<p>
+          </div>
+        </div>
+        <div class="portfolio_box col-sm-4 col-12">
+          <img src='/images/mockup6.jpg' alt="mockup">
+          <div class="portfolio_inner">
+            <h3>Burned Logo</h3>
+            <p>Proin iaculis<p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+  </footer>
 </body>
 </html>
