Add footer html with styles

--- a/index.html
+++ b/index.html
@@ -133,7 +133,20 @@
       </div>
     </div>
   </section>
-  <footer>
+  <footer class="page_footer">
+    <div class="container">
+      <div class="row">
+        <div class="copyright col-5">
+          <p>© Copyright 2014 FreebiesXpress.com</p>
+        </div>
+        <div class="social_media col-7">
+            <i class="fab twitter_hover fa-twitter"></i>
+            <i class="fab facebook_hover fa-facebook-f"></i>
+            <i class="fab pinterest_hover fa-pinterest-p"></i>
+            <i class="fab google_hover fa-google-plus-g"></i>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
