Add RWD html and styles

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="splash">
+  <section class="splash splash_sm">
     <header class="logo_navigation">
       <div class="container">
         <div class="row">
-          <div class="logo col-6">
+          <div class="logo col-2 col-lg-6">
             <p>Golden</p>
           </div>
-          <div class="navigation col-6">
+          <div class="navigation navigation_sm col-10 col-lg-6">
             <ul>
               <li>
                 <a href="#">Home</a>
@@ -41,8 +41,8 @@
       </div>
     </header>
     <div class="splash_inner">
-      <p class="welcome_text">Welcome to our studio</p>
-      <h1>It's nice to meet you</h1>
+      <p class="welcome_text welcome_text_sm">Welcome to our studio</p>
+      <h1 class="h1_text_sm">It's nice to meet you</h1>
       <a href="#" class="btn">Tell me more</a>
     </div>
   </section>
@@ -54,14 +54,14 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="services_box col-sm-4 col-12">
+          <div class="services_box box_space col-sm-4 col-12">
             <i class="fas fa-shopping-basket"></i>
             <h3>E-commerce</h3>
             <p>Proin iaculis purus consequat sem cure
               digni ssim. Donec porttitora entum suscipit
               aenean rhoncus posuere odio in tincidunt.<p>
           </div>
-          <div class="services_box col-sm-4 col-12">
+          <div class="services_box box_space col-sm-4 col-12">
             <i class="fas fa-mobile"></i>
             <h3>Responsive Web</h3>
             <p>Proin iaculis purus consequat sem cure
@@ -86,14 +86,14 @@
     </div>
     <div class="container">
       <div class="row row_space">
-        <div class="portfolio_box col-sm-4 col-12">
+        <div class="portfolio_box box_space col-sm-4 col-12">
           <img src='/images/mockup1.jpg' alt="mockup">
           <div class="portfolio_inner">
             <h3>Ebony & Ivory</h3>
             <p>Proin iaculis<p>
           </div>
         </div>
-        <div class="portfolio_box col-sm-4 col-12">
+        <div class="portfolio_box box_space col-sm-4 col-12">
           <img src='/images/mockup2.jpg' alt="mockup">
           <div class="portfolio_inner">
             <h3>Smart Stationary</h3>
@@ -109,14 +109,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="portfolio_box col-sm-4 col-12">
+        <div class="portfolio_box box_space col-sm-4 col-12">
           <img src='/images/mockup4.jpg' alt="mockup">
           <div class="portfolio_inner">
             <h3>Vinyl Record</h3>
             <p>Proin iaculis<p>
           </div>
         </div>
-        <div class="portfolio_box col-sm-4 col-12">
+        <div class="portfolio_box box_space col-sm-4 col-12">
           <img src='/images/mockup5.jpg' alt="mockup">
           <div class="portfolio_inner">
             <h3>Treehouse Template</h3>
@@ -136,7 +136,7 @@
   <footer class="page_footer">
     <div class="container">
       <div class="row">
-        <div class="copyright col-5">
+        <div class="copyright copyright_sm col-5">
           <p>© Copyright 2014 FreebiesXpress.com</p>
         </div>
         <div class="social_media col-7">
