Add comments in files html and scss

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- main header splash-->
   <section class="splash splash_sm">
+    <!-- navigation -->
     <header class="logo_navigation">
       <div class="container">
         <div class="row">
@@ -46,7 +48,9 @@
       <a href="#" class="btn">Tell me more</a>
     </div>
   </section>
+  <!-- main content-->
   <div class="main_container">
+    <!-- services section-->
     <section class="services">
       <div class="section_title">
         <h2>Services</h2>
@@ -79,6 +83,7 @@
       </div>
     </section>
   </div>
+  <!-- portfolio section -->
   <section class="portfolio">
     <div class="section_title">
       <h2>Our Portfolio</h2>
@@ -133,6 +138,7 @@
       </div>
     </div>
   </section>
+  <!-- footer section -->
   <footer class="page_footer">
     <div class="container">
       <div class="row">
